# PayZoll-1.0.0-P2

./: README.md  app.js  package-lock.json  package.json  server.js
Frontend/: index.html  package-lock.json  package.json  tailwind.config.js
Frontend/src/: App.jsx
Frontend/src/Aptos/transfers/: Move.toml  deployed.txt
Frontend/src/Stellar/bulk-payroll/: Cargo.toml  bulk-pay.sh  readme.md
Frontend/src/Stellar/bulk-payroll/.stellar/contract-ids/: bulk_payroll.json
Frontend/src/Stellar/bulk-payroll/.stellar/identity/: alice.toml  bob.toml
Frontend/src/Stellar/bulk-payroll/src/: lib.rs
Frontend/src/Stellar/bulk-payroll/test/: lib.rs
Frontend/src/Stellar/deposit_contract/: Cargo.toml
Frontend/src/Stellar/deposit_contract/src/: lib.rs
Frontend/src/blockchain/: BulkPayroll.sol  hardhat.config.js
Frontend/src/blockchain/cache/: solidity-files-cache.json
Frontend/src/blockchain/scripts/: Lending.js  Token.js  deploy.js
Frontend/src/components/: BotIntro.jsx  Features.jsx  Footer.jsx  Hero.jsx  HowItWorks.jsx  Navbar.jsx  Pricing.jsx  TechnologySection.jsx  TestimonialsSection.jsx  TokenBridgeSection.jsx
Frontend/src/components/auth/: SignupForm.jsx
Frontend/src/constant/: chain.js
Frontend/src/context/: useWeb3.jsx
Frontend/src/hooks/: useAccount.js
Frontend/src/pages/: AptosBulk.jsx  Bulk.jsx  EmployeeDashboard.jsx  EmployerDashboard.jsx  LendingPage.jsx  StellarBulk.jsx  StellarIntro.jsx  StellarSwap.jsx
bots/client/app/: page.tsx
bots/server/: discord_bot.py  reddit_bot.py  requirements.txt
utils/: encryption.js
(+39 files in other folders)
