[package]
name = "bulk-payroll"
version = "0.1.0"
edition = "2021"  
authors = ["Abhinav Pangaria <abhinavpangaria2003@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.0" 

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
panic = "abort"
lto = true
