[package]
name = "deposit-contract"
version = "0.1.0"
edition = "2021"  
authors = ["Abhinav Pangaria <abhinavpangaria2003@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.7" 

[dev-dependencies]
soroban-sdk = { version = "22.0.7", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
panic = "abort"
lto = true
